versioned_docs/version-9.x/database.md
<!-- # Database: Getting Started -->
# Database: Getting Started

- [Introduction](#introduction)
    - [Configuration](#configuration)
    - [Read & Write Connections](#read-and-write-connections)
- [Running SQL Queries](#running-queries)
    - [Using Multiple Database Connections](#using-multiple-database-connections)
    - [Listening For Query Events](#listening-for-query-events)
    - [Monitoring Cumulative Query Time](#monitoring-cumulative-query-time)
- [Database Transactions](#database-transactions)
- [Connecting To The Database CLI](#connecting-to-the-database-cli)
- [Inspecting Your Databases](#inspecting-your-databases)
- [Monitoring Your Databases](#monitoring-your-databases)

<a name="introduction"></a>
<!-- ## Introduction -->
## Introduction

<!-- Almost every modern web application interacts with a database. Laravel makes interacting with databases extremely simple across a variety of supported databases using raw SQL, a [fluent query builder](/docs/9.x/queries), and the [Eloquent ORM](/docs/9.x/eloquent). Currently, Laravel provides first-party support for five databases: -->
거의 모든 최신 웹 애플리케이션은 데이터베이스와 상호작용합니다. Laravel은 다양한 지원 데이터베이스에서 순수 SQL, [fluent query builder](/docs/9.x/queries), 그리고 [Eloquent ORM](/docs/9.x/eloquent)을 활용하여 데이터베이스와의 상호작용을 매우 간단하게 만들어줍니다. 현재 Laravel은 다섯 가지 데이터베이스에 대해 공식적으로 지원합니다.

<!-- <div class="content-list" markdown="1"> -->
<div class="content-list" markdown="1">

<!--
- MariaDB 10.3+ ([Version Policy](https://mariadb.org/about/#maintenance-policy))
- MySQL 5.7+ ([Version Policy](https://en.wikipedia.org/wiki/MySQL#Release_history))
- PostgreSQL 10.0+ ([Version Policy](https://www.postgresql.org/support/versioning/))
- SQLite 3.8.8+
- SQL Server 2017+ ([Version Policy](https://docs.microsoft.com/en-us/lifecycle/products/?products=sql-server))
-->
- MariaDB 10.3+ ([Version Policy](https://mariadb.org/about/#maintenance-policy))
- MySQL 5.7+ ([Version Policy](https://en.wikipedia.org/wiki/MySQL#Release_history))
- PostgreSQL 10.0+ ([Version Policy](https://www.postgresql.org/support/versioning/))
- SQLite 3.8.8+
- SQL Server 2017+ ([Version Policy](https://docs.microsoft.com/en-us/lifecycle/products/?products=sql-server))

<!-- </div> -->
</div>

<a name="configuration"></a>
<!-- ### Configuration -->
### Configuration

<!-- The configuration for Laravel's database services is located in your application's `config/database.php` configuration file. In this file, you may define all of your database connections, as well as specify which connection should be used by default. Most of the configuration options within this file are driven by the values of your application's environment variables. Examples for most of Laravel's supported database systems are provided in this file. -->
Laravel의 데이터베이스 서비스에 대한 설정은 애플리케이션의 `config/database.php` 파일에 위치합니다. 이 파일에서 모든 데이터베이스 연결을 정의할 수 있으며, 기본적으로 사용할 연결도 지정할 수 있습니다. 대부분의 설정 옵션은 애플리케이션의 환경 변수 값을 기반으로 동작합니다. Laravel에서 지원하는 주요 데이터베이스 시스템의 예제 설정이 이 파일에 포함되어 있습니다.

<!-- By default, Laravel's sample [environment configuration](/docs/9.x/configuration#environment-configuration) is ready to use with [Laravel Sail](/docs/9.x/sail), which is a Docker configuration for developing Laravel applications on your local machine. However, you are free to modify your database configuration as needed for your local database. -->
기본적으로 Laravel의 샘플 [environment configuration](/docs/9.x/configuration#environment-configuration)은 [Laravel Sail](/docs/9.x/sail)과 바로 사용할 수 있도록 준비되어 있습니다. Laravel Sail은 로컬 환경에서 Laravel 애플리케이션 개발을 위한 Docker 설정입니다. 하지만, 필요하다면 여러분의 로컬 데이터베이스 환경에 맞게 해당 설정을 자유롭게 수정해도 됩니다.

<a name="sqlite-configuration"></a>
<!-- #### SQLite Configuration -->
#### SQLite Configuration

<!-- SQLite databases are contained within a single file on your filesystem. You can create a new SQLite database using the `touch` command in your terminal: `touch database/database.sqlite`. After the database has been created, you may easily configure your environment variables to point to this database by placing the absolute path to the database in the `DB_DATABASE` environment variable: -->
SQLite 데이터베이스는 파일 시스템에 하나의 파일로 저장됩니다. 터미널에서 `touch` 명령어를 사용하여 새 SQLite 데이터베이스를 생성할 수 있습니다: `touch database/database.sqlite`. 데이터베이스를 생성한 후에는, 환경 변수 중 `DB_DATABASE`에 데이터베이스의 절대 경로를 지정하여 이 데이터베이스를 사용하도록 쉽게 설정할 수 있습니다.

```ini
DB_CONNECTION=sqlite
DB_DATABASE=/absolute/path/to/database.sqlite
```

<!-- To enable foreign key constraints for SQLite connections, you should set the `DB_FOREIGN_KEYS` environment variable to `true`: -->
SQLite 연결에서 외래 키 제약 조건을 활성화하려면, `DB_FOREIGN_KEYS` 환경 변수를 `true`로 설정해야 합니다.

```ini
DB_FOREIGN_KEYS=true
```

<a name="mssql-configuration"></a>
<!-- #### Microsoft SQL Server Configuration -->
#### Microsoft SQL Server Configuration

<!-- To use a Microsoft SQL Server database, you should ensure that you have the `sqlsrv` and `pdo_sqlsrv` PHP extensions installed as well as any dependencies they may require such as the Microsoft SQL ODBC driver. -->
Microsoft SQL Server 데이터베이스를 사용하려면, `sqlsrv` 및 `pdo_sqlsrv` PHP 확장자와 함께 필요한 모든 의존성(예: Microsoft SQL ODBC 드라이버)이 설치되어 있는지 확인해야 합니다.

<a name="configuration-using-urls"></a>
<!-- #### Configuration Using URLs -->
#### Configuration Using URLs

<!-- Typically, database connections are configured using multiple configuration values such as `host`, `database`, `username`, `password`, etc. Each of these configuration values has its own corresponding environment variable. This means that when configuring your database connection information on a production server, you need to manage several environment variables. -->
일반적으로 데이터베이스 연결은 `host`, `database`, `username`, `password` 등 여러 가지 설정값을 개별적으로 지정합니다. 각각의 설정값에는 환경 변수가 매핑되어 있어, 운영 서버에서 데이터베이스 연결 정보를 설정할 때 여러 환경 변수를 관리해야 합니다.

<!-- Some managed database providers such as AWS and Heroku provide a single database "URL" that contains all of the connection information for the database in a single string. An example database URL may look something like the following: -->
AWS나 Heroku와 같은 일부 관리형 데이터베이스 서비스에서는 모든 연결 정보를 하나의 문자열에 담은 “데이터베이스 URL”을 제공합니다. 이 URL의 예시는 아래와 같습니다.

```html
mysql://root:password@127.0.0.1/forge?charset=UTF-8
```

<!-- These URLs typically follow a standard schema convention: -->
이러한 URL은 일반적으로 표준 스키마 형태를 따릅니다.

```html
driver://username:password@host:port/database?options
```

<!-- For convenience, Laravel supports these URLs as an alternative to configuring your database with multiple configuration options. If the `url` (or corresponding `DATABASE_URL` environment variable) configuration option is present, it will be used to extract the database connection and credential information. -->
Laravel은 편의를 위해 여러 설정값 대신 이와 같은 URL로 데이터베이스를 설정할 수 있도록 지원합니다. 만약 `url`(혹은 해당하는 `DATABASE_URL` 환경 변수) 옵션이 존재하면, 이 값을 통해 데이터베이스 연결 정보 및 인증 정보가 추출됩니다.

<a name="read-and-write-connections"></a>
<!-- ### Read & Write Connections -->
### Read & Write Connections

<!-- Sometimes you may wish to use one database connection for SELECT statements, and another for INSERT, UPDATE, and DELETE statements. Laravel makes this a breeze, and the proper connections will always be used whether you are using raw queries, the query builder, or the Eloquent ORM. -->
때로는 SELECT 쿼리에는 한 데이터베이스 연결을, INSERT, UPDATE, DELETE 쿼리에는 다른 연결을 사용하고 싶을 수도 있습니다. Laravel은 이러한 작업을 매우 쉽게 처리할 수 있으며, 쿼리 빌더나 Eloquent ORM, 혹은 순수 쿼리 등 어떤 방법을 사용하더라도 올바른 연결이 자동으로 지정됩니다.

<!-- To see how read / write connections should be configured, let's look at this example: -->
읽기/쓰기 연결을 어떻게 구성하는지 보기 위해 다음 예시를 살펴보겠습니다.

```
'mysql' => [
    'read' => [
        'host' => [
            '192.168.1.1',
            '196.168.1.2',
        ],
    ],
    'write' => [
        'host' => [
            '196.168.1.3',
        ],
    ],
    'sticky' => true,
    'driver' => 'mysql',
    'database' => 'database',
    'username' => 'root',
    'password' => '',
    'charset' => 'utf8mb4',
    'collation' => 'utf8mb4_unicode_ci',
    'prefix' => '',
],
```

<!-- Note that three keys have been added to the configuration array: `read`, `write` and `sticky`. The `read` and `write` keys have array values containing a single key: `host`. The rest of the database options for the `read` and `write` connections will be merged from the main `mysql` configuration array. -->
설정 배열에는 `read`, `write`, 그리고 `sticky` 세 가지 키가 추가된 것을 볼 수 있습니다. `read`와 `write` 키는 각각 `host` 키를 가진 배열 값을 가지고 있습니다. `read`와 `write` 연결에 대한 기타 데이터베이스 옵션은 메인 `mysql` 설정 배열에서 병합됩니다.

<!-- You only need to place items in the `read` and `write` arrays if you wish to override the values from the main `mysql` array. So, in this case, `192.168.1.1` will be used as the host for the "read" connection, while `192.168.1.3` will be used for the "write" connection. The database credentials, prefix, character set, and all other options in the main `mysql` array will be shared across both connections. When multiple values exist in the `host` configuration array, a database host will be randomly chosen for each request. -->
만약 메인 `mysql` 배열의 값을 덮어쓰고 싶을 때만, `read`와 `write` 배열에 세부 항목을 넣으면 됩니다. 위의 경우에서는 `192.168.1.1`이 "읽기(read)" 연결의 호스트로, `192.168.1.3`이 "쓰기(write)" 연결의 호스트로 사용됩니다. 데이터베이스 인증 정보, prefix, 문자셋 등 다른 모든 옵션은 메인 `mysql` 배열의 값을 두 연결에서 공유합니다. `host` 배열에 여러 값이 있으면, 요청마다 무작위로 하나가 선택됩니다.

<a name="the-sticky-option"></a>
<!-- #### The `sticky` Option -->
#### The `sticky` Option

<!-- The `sticky` option is an *optional* value that can be used to allow the immediate reading of records that have been written to the database during the current request cycle. If the `sticky` option is enabled and a "write" operation has been performed against the database during the current request cycle, any further "read" operations will use the "write" connection. This ensures that any data written during the request cycle can be immediately read back from the database during that same request. It is up to you to decide if this is the desired behavior for your application. -->
`sticky` 옵션은 *선택적으로* 사용할 수 있는 값으로, 한 요청 사이클 내에서 데이터베이스에 기록된 레코드를 곧바로 읽고 싶을 때 활용할 수 있습니다. 만약 `sticky` 옵션이 활성화되어 있고, 현재 요청에서 "쓰기" 작업이 실행된다면, 이어지는 모든 "읽기" 쿼리는 "쓰기" 연결을 사용하게 됩니다. 이렇게 하면 요청 중에 쓰여진 데이터를 즉시 다시 읽어들일 수 있습니다. 이 기능이 애플리케이션에 꼭 필요한 동작인지는 직접 판단하셔야 합니다.

<a name="running-queries"></a>
<!-- ## Running SQL Queries -->
## Running SQL Queries

<!-- Once you have configured your database connection, you may run queries using the `DB` facade. The `DB` facade provides methods for each type of query: `select`, `update`, `insert`, `delete`, and `statement`. -->
데이터베이스 연결을 설정한 후에는, `DB` 파사드를 이용해 쿼리를 실행할 수 있습니다. `DB` 파사드는 `select`, `update`, `insert`, `delete`, `statement` 등 각각의 쿼리 유형에 맞는 메서드를 제공합니다.

<a name="running-a-select-query"></a>
<!-- #### Running A Select Query -->
#### Running A Select Query

<!-- To run a basic SELECT query, you may use the `select` method on the `DB` facade: -->
기본적인 SELECT 쿼리는 `DB` 파사드의 `select` 메서드를 사용해 실행할 수 있습니다.

```
<?php

namespace App\Http\Controllers;

use App\Http\Controllers\Controller;
use Illuminate\Support\Facades\DB;

class UserController extends Controller
{
    /**
     * Show a list of all of the application's users.
     *
     * @return \Illuminate\Http\Response
     */
    public function index()
    {
        $users = DB::select('select * from users where active = ?', [1]);

        return view('user.index', ['users' => $users]);
    }
}
```

<!-- The first argument passed to the `select` method is the SQL query, while the second argument is any parameter bindings that need to be bound to the query. Typically, these are the values of the `where` clause constraints. Parameter binding provides protection against SQL injection. -->
`select` 메서드의 첫 번째 인수는 SQL 쿼리 문자열이며, 두 번째 인수는 쿼리에 바인딩할 파라미터 배열입니다. 일반적으로 `where` 절의 변수 값들을 여기서 지정합니다. 파라미터 바인딩을 사용하면 SQL 인젝션 공격을 방지할 수 있습니다.

<!-- The `select` method will always return an `array` of results. Each result within the array will be a PHP `stdClass` object representing a record from the database: -->
`select` 메서드는 언제나 결과를 `array`로 반환합니다. 반환되는 배열의 각 결과는 데이터베이스의 레코드를 나타내는 PHP `stdClass` 객체입니다.

```
use Illuminate\Support\Facades\DB;

$users = DB::select('select * from users');

foreach ($users as $user) {
    echo $user->name;
}
```

<a name="selecting-scalar-values"></a>
<!-- #### Selecting Scalar Values -->
#### Selecting Scalar Values

<!-- Sometimes your database query may result in a single, scalar value. Instead of being required to retrieve the query's scalar result from a record object, Laravel allows you to retrieve this value directly using the `scalar` method: -->
쿼리 결과가 하나의 스칼라(단일) 값인 경우도 있습니다. 이럴 때는 결과 객체에서 직접 값을 꺼내지 않고, `scalar` 메서드를 이용해 즉시 그 값을 가져올 수 있습니다.

```
$burgers = DB::scalar(
    "select count(case when food = 'burger' then 1 end) as burgers from menu"
);
```

<a name="using-named-bindings"></a>
<!-- #### Using Named Bindings -->
#### Using Named Bindings

<!-- Instead of using `?` to represent your parameter bindings, you may execute a query using named bindings: -->
파라미터 바인딩에 `?` 대신 명명된 바인딩을 사용할 수도 있습니다.

```
$results = DB::select('select * from users where id = :id', ['id' => 1]);
```

<a name="running-an-insert-statement"></a>
<!-- #### Running An Insert Statement -->
#### Running An Insert Statement

<!-- To execute an `insert` statement, you may use the `insert` method on the `DB` facade. Like `select`, this method accepts the SQL query as its first argument and bindings as its second argument: -->
`insert` 문을 실행하려면 `DB` 파사드의 `insert` 메서드를 사용합니다. `select`와 마찬가지로 첫 번째 인수는 SQL 쿼리, 두 번째 인수는 바인딩할 값 배열입니다.

```
use Illuminate\Support\Facades\DB;

DB::insert('insert into users (id, name) values (?, ?)', [1, 'Marc']);
```

<a name="running-an-update-statement"></a>
<!-- #### Running An Update Statement -->
#### Running An Update Statement

<!-- The `update` method should be used to update existing records in the database. The number of rows affected by the statement is returned by the method: -->
기존 레코드를 수정하고 싶을 때는 `update` 메서드를 사용합니다. 이 메서드는 영향을 받은 행(row)의 개수를 반환합니다.

```
use Illuminate\Support\Facades\DB;

$affected = DB::update(
    'update users set votes = 100 where name = ?',
    ['Anita']
);
```

<a name="running-a-delete-statement"></a>
<!-- #### Running A Delete Statement -->
#### Running A Delete Statement

<!-- The `delete` method should be used to delete records from the database. Like `update`, the number of rows affected will be returned by the method: -->
데이터베이스에서 레코드를 삭제할 때는 `delete` 메서드를 사용합니다. `update`와 마찬가지로, 영향받은 행의 수가 반환됩니다.

```
use Illuminate\Support\Facades\DB;

$deleted = DB::delete('delete from users');
```

<a name="running-a-general-statement"></a>
<!-- #### Running A General Statement -->
#### Running A General Statement

<!-- Some database statements do not return any value. For these types of operations, you may use the `statement` method on the `DB` facade: -->
일부 데이터베이스 구문은 별도의 반환값이 없습니다. 이런 작업에는 `DB` 파사드의 `statement` 메서드를 사용합니다.

```
DB::statement('drop table users');
```

<a name="running-an-unprepared-statement"></a>
<!-- #### Running An Unprepared Statement -->
#### Running An Unprepared Statement

<!-- Sometimes you may want to execute an SQL statement without binding any values. You may use the `DB` facade's `unprepared` method to accomplish this: -->
때로는 파라미터 바인딩 없이 SQL 문을 바로 실행하고 싶을 때가 있습니다. 이럴 때는 `DB` 파사드의 `unprepared` 메서드를 사용하면 됩니다.

```
DB::unprepared('update users set votes = 100 where name = "Dries"');
```

> [!WARNING]
> unprepared 쿼리는 파라미터 바인딩을 적용하지 않기 때문에, SQL 인젝션에 취약할 수 있습니다. 사용자 입력이 포함된 쿼리에 unprepared 메서드는 절대 사용하지 마십시오.

<a name="implicit-commits-in-transactions"></a>
<!-- #### Implicit Commits -->
#### Implicit Commits

<!-- When using the `DB` facade's `statement` and `unprepared` methods within transactions you must be careful to avoid statements that cause [implicit commits](https://dev.mysql.com/doc/refman/8.0/en/implicit-commit.html). These statements will cause the database engine to indirectly commit the entire transaction, leaving Laravel unaware of the database's transaction level. An example of such a statement is creating a database table: -->
트랜잭션 내에서 `DB` 파사드의 `statement` 및 `unprepared` 메서드를 사용할 때는, [implicit commits](https://dev.mysql.com/doc/refman/8.0/en/implicit-commit.html)을 발생시킬 수 있는 구문을 주의해야 합니다. 이런 구문이 실행되면 데이터베이스 엔진이 트랜잭션 전체를 암묵적으로 커밋하게 되며, Laravel은 데이터베이스의 트랜잭션 상태를 알 수 없게 됩니다. 예를 들어, 테이블 생성 문이 해당합니다.

```
DB::unprepared('create table a (col varchar(1) null)');
```

<!-- Please refer to the MySQL manual for [a list of all statements](https://dev.mysql.com/doc/refman/8.0/en/implicit-commit.html) that trigger implicit commits. -->
암묵적 커밋을 유발하는 모든 구문에 대한 목록은 MySQL 매뉴얼의 [a list of all statements](https://dev.mysql.com/doc/refman/8.0/en/implicit-commit.html)를 참고하세요.

<a name="using-multiple-database-connections"></a>
<!-- ### Using Multiple Database Connections -->
### Using Multiple Database Connections

<!-- If your application defines multiple connections in your `config/database.php` configuration file, you may access each connection via the `connection` method provided by the `DB` facade. The connection name passed to the `connection` method should correspond to one of the connections listed in your `config/database.php` configuration file or configured at runtime using the `config` helper: -->
애플리케이션의 `config/database.php` 파일에서 여러 데이터베이스 연결을 정의했다면, `DB` 파사드의 `connection` 메서드를 사용하여 각 연결을 사용할 수 있습니다. `connection` 메서드에 전달하는 연결 이름은 `config/database.php` 파일에 정의된 이름 중 하나이거나, 실행 중에 `config` 헬퍼로 설정한 값이어야 합니다.

```
use Illuminate\Support\Facades\DB;

$users = DB::connection('sqlite')->select(/* ... */);
```

<!-- You may access the raw, underlying PDO instance of a connection using the `getPdo` method on a connection instance: -->
또한, 연결 인스턴스에서 `getPdo` 메서드를 사용하면 원래 PHP의 PDO 인스턴스를 직접 얻을 수 있습니다.

```
$pdo = DB::connection()->getPdo();
```

<a name="listening-for-query-events"></a>
<!-- ### Listening For Query Events -->
### Listening For Query Events

<!-- If you would like to specify a closure that is invoked for each SQL query executed by your application, you may use the `DB` facade's `listen` method. This method can be useful for logging queries or debugging. You may register your query listener closure in the `boot` method of a [service provider](/docs/9.x/providers): -->
애플리케이션에서 실행되는 모든 SQL 쿼리에 대해 호출되는 클로저(익명 함수)를 지정하고 싶다면, `DB` 파사드의 `listen` 메서드를 사용할 수 있습니다. 이 메서드는 쿼리 로깅이나 디버깅에 유용합니다. 쿼리 리스너 클로저는 [service provider](/docs/9.x/providers)의 `boot` 메서드에서 등록할 수 있습니다.

```
<?php

namespace App\Providers;

use Illuminate\Support\Facades\DB;
use Illuminate\Support\ServiceProvider;

class AppServiceProvider extends ServiceProvider
{
    /**
     * Register any application services.
     *
     * @return void
     */
    public function register()
    {
        //
    }

    /**
     * Bootstrap any application services.
     *
     * @return void
     */
    public function boot()
    {
        DB::listen(function ($query) {
            // $query->sql;
            // $query->bindings;
            // $query->time;
        });
    }
}
```

<a name="monitoring-cumulative-query-time"></a>
<!-- ### Monitoring Cumulative Query Time -->
### Monitoring Cumulative Query Time

<!-- A common performance bottleneck of modern web applications is the amount of time they spend querying databases. Thankfully, Laravel can invoke a closure or callback of your choice when it spends too much time querying the database during a single request. To get started, provide a query time threshold (in milliseconds) and closure to the `whenQueryingForLongerThan` method. You may invoke this method in the `boot` method of a [service provider](/docs/9.x/providers): -->
현대 웹 애플리케이션의 성능 병목 중 하나는 데이터베이스 쿼리에 소요되는 시간입니다. Laravel은 한 요청에서 데이터베이스 쿼리에 너무 오래 걸릴 경우, 지정한 클로저나 콜백을 호출할 수 있습니다. 시작하려면 `whenQueryingForLongerThan` 메서드에 쿼리 시간 임계값(밀리초 단위)과 클로저를 전달합니다. 이 메서드는 [service provider](/docs/9.x/providers)의 `boot` 메서드에서 호출할 수 있습니다.

```
<?php

namespace App\Providers;

use Illuminate\Database\Connection;
use Illuminate\Support\Facades\DB;
use Illuminate\Support\ServiceProvider;
use Illuminate\Database\Events\QueryExecuted;

class AppServiceProvider extends ServiceProvider
{
    /**
     * Register any application services.
     *
     * @return void
     */
    public function register()
    {
        //
    }

    /**
     * Bootstrap any application services.
     *
     * @return void
     */
    public function boot()
    {
        DB::whenQueryingForLongerThan(500, function (Connection $connection, QueryExecuted $event) {
            // Notify development team...
        });
    }
}
```

<a name="database-transactions"></a>
<!-- ## Database Transactions -->
## Database Transactions

<!-- You may use the `transaction` method provided by the `DB` facade to run a set of operations within a database transaction. If an exception is thrown within the transaction closure, the transaction will automatically be rolled back and the exception is re-thrown. If the closure executes successfully, the transaction will automatically be committed. You don't need to worry about manually rolling back or committing while using the `transaction` method: -->
`DB` 파사드가 제공하는 `transaction` 메서드를 사용하면 데이터베이스 트랜잭션 내에서 여러 작업을 실행할 수 있습니다. 만약 트랜잭션 클로저 내에서 예외가 발생하면 트랜잭션이 자동으로 롤백되고, 예외 또한 다시 발생합니다. 클로저가 정상적으로 실행되면 트랜잭션은 자동으로 커밋됩니다. `transaction` 메서드를 사용하는 경우, 트랜잭션의 롤백이나 커밋을 직접 처리할 필요가 없습니다.

```
use Illuminate\Support\Facades\DB;

DB::transaction(function () {
    DB::update('update users set votes = 1');

    DB::delete('delete from posts');
});
```

<a name="handling-deadlocks"></a>
<!-- #### Handling Deadlocks -->
#### Handling Deadlocks

<!-- The `transaction` method accepts an optional second argument which defines the number of times a transaction should be retried when a deadlock occurs. Once these attempts have been exhausted, an exception will be thrown: -->
`transaction` 메서드는 선택적으로 두 번째 인수에, 데드락이 발생했을 때 트랜잭션을 재시도할 횟수를 지정할 수 있습니다. 지정한 횟수만큼 재시도 후에도 실패하면 예외가 발생합니다.

```
use Illuminate\Support\Facades\DB;

DB::transaction(function () {
    DB::update('update users set votes = 1');

    DB::delete('delete from posts');
}, 5);
```

<a name="manually-using-transactions"></a>
<!-- #### Manually Using Transactions -->
#### Manually Using Transactions

<!-- If you would like to begin a transaction manually and have complete control over rollbacks and commits, you may use the `beginTransaction` method provided by the `DB` facade: -->
트랜잭션을 수동으로 시작하여 직접 롤백과 커밋을 제어하고 싶다면, `DB` 파사드의 `beginTransaction` 메서드를 사용하면 됩니다.

```
use Illuminate\Support\Facades\DB;

DB::beginTransaction();
```

<!-- You can rollback the transaction via the `rollBack` method: -->
트랜잭션을 롤백하려면 `rollBack` 메서드를 호출합니다.

```
DB::rollBack();
```

<!-- Lastly, you can commit a transaction via the `commit` method: -->
마지막으로 트랜잭션을 커밋하려면 `commit` 메서드를 사용합니다.

```
DB::commit();
```

> [!NOTE]
> `DB` 파사드의 트랜잭션 메서드는 [query builder](/docs/9.x/queries)와 [Eloquent ORM](/docs/9.x/eloquent) 모두에 적용됩니다.

<a name="connecting-to-the-database-cli"></a>
<!-- ## Connecting To The Database CLI -->
## Connecting To The Database CLI

<!-- If you would like to connect to your database's CLI, you may use the `db` Artisan command: -->
데이터베이스의 CLI로 직접 연결하고 싶다면, `db` 아티즌 명령어를 사용할 수 있습니다.

```shell
php artisan db
```

<!-- If needed, you may specify a database connection name to connect to a database connection that is not the default connection: -->
필요하다면, 기본 연결이 아닌 다른 데이터베이스 연결 이름을 지정하여 접속할 수도 있습니다.

```shell
php artisan db mysql
```

<a name="inspecting-your-databases"></a>
<!-- ## Inspecting Your Databases -->
## Inspecting Your Databases

<!-- Using the `db:show` and `db:table` Artisan commands, you can get valuable insight into your database and its associated tables. To see an overview of your database, including its size, type, number of open connections, and a summary of its tables, you may use the `db:show` command: -->
`db:show` 및 `db:table` 아티즌 명령어를 통해 데이터베이스 및 해당 테이블에 대한 상세 정보를 자세히 확인할 수 있습니다. 데이터베이스의 전체 개요(크기, 타입, 열린 연결 수, 테이블 요약 등)를 보려면 `db:show` 명령어를 사용합니다.

```shell
php artisan db:show
```

<!-- You may specify which database connection should be inspected by providing the database connection name to the command via the `--database` option: -->
명령어에서 `--database` 옵션을 사용해 검사할 데이터베이스 연결 이름을 지정할 수 있습니다.

```shell
php artisan db:show --database=pgsql
```

<!-- If you would like to include table row counts and database view details within the output of the command, you may provide the `--counts` and `--views` options, respectively. On large databases, retrieving row counts and view details can be slow: -->
테이블의 행(row) 개수나 데이터베이스 뷰(view)에 대한 세부 사항도 함께 출력하려면, 각각 `--counts` 및 `--views` 옵션을 사용할 수 있습니다. 다만, 데이터베이스가 크면 이러한 정보 조회는 시간이 다소 걸릴 수 있습니다.

```shell
php artisan db:show --counts --views
```

<a name="table-overview"></a>
<!-- #### Table Overview -->
#### Table Overview

<!-- If you would like to get an overview of an individual table within your database, you may execute the `db:table` Artisan command. This command provides a general overview of a database table, including its columns, types, attributes, keys, and indexes: -->
데이터베이스에 있는 특정 테이블의 개요를 보고 싶다면, `db:table` 아티즌 명령어를 실행하면 됩니다. 이 명령은 테이블의 컬럼, 타입, 속성, 키, 인덱스 등에 대한 전반적인 정보를 제공합니다.

```shell
php artisan db:table users
```

<a name="monitoring-your-databases"></a>
<!-- ## Monitoring Your Databases -->
## Monitoring Your Databases

<!-- Using the `db:monitor` Artisan command, you can instruct Laravel to dispatch an `Illuminate\Database\Events\DatabaseBusy` event if your database is managing more than a specified number of open connections. -->
`db:monitor` 아티즌 명령어를 사용하면 Laravel이 데이터베이스의 열린 연결 수가 특정 임계값을 초과하는 경우 `Illuminate\Database\Events\DatabaseBusy` 이벤트를 발생시킬 수 있습니다.

<!-- To get started, you should schedule the `db:monitor` command to [run every minute](/docs/9.x/scheduling). The command accepts the names of the database connection configurations that you wish to monitor as well as the maximum number of open connections that should be tolerated before dispatching an event: -->
먼저 [run every minute](/docs/9.x/scheduling) `db:monitor` 명령어를 스케줄링해야 합니다. 이 명령어는 모니터링할 데이터베이스 연결 이름들과, 이벤트가 발생할 최대 열린 연결 수를 인자로 받습니다.

```shell
php artisan db:monitor --databases=mysql,pgsql --max=100
```

<!-- Scheduling this command alone is not enough to trigger a notification alerting you of the number of open connections. When the command encounters a database that has an open connection count that exceeds your threshold, a `DatabaseBusy` event will be dispatched. You should listen for this event within your application's `EventServiceProvider` in order to send a notification to you or your development team: -->
명령어를 스케줄링하는 것만으로는 알림이 자동으로 전송되지 않습니다. 명령어가 임계치를 초과한 연결 수를 가진 데이터베이스를 발견하면, `DatabaseBusy` 이벤트를 발생시킵니다. 해당 이벤트를 애플리케이션의 `EventServiceProvider`에서 수신하여 사용자가 알림을 받을 수 있도록 구현해야 합니다.

```php
use App\Notifications\DatabaseApproachingMaxConnections;
use Illuminate\Database\Events\DatabaseBusy;
use Illuminate\Support\Facades\Event;
use Illuminate\Support\Facades\Notification;

/**
 * Register any other events for your application.
 *
 * @return void
 */
public function boot()
{
    Event::listen(function (DatabaseBusy $event) {
        Notification::route('mail', 'dev@example.com')
                ->notify(new DatabaseApproachingMaxConnections(
                    $event->connectionName,
                    $event->connections
                ));
    });
}
```
